[package]
name = "abm"
version = "0.1.0"
authors = ["Wleter <marcraftzastepczy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faer = "0.19.4"
quantum = { git = "https://github.com/Wleter/quantum.git", features = ["spins", "faer"] }