[package]
name = "abm_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "abm_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
abm = { path = "../" }
quantum = { git = "https://github.com/Wleter/quantum.git", default-features = false, features = ["units"]}
faer = "0.19.4"